[gd_scene format=3 uid="uid://bdhuuvemvfnj6"]

[ext_resource type="Script" uid="uid://bhs4tkwt657ie" path="res://UI/UpgradeUI/upgrade_ui.gd" id="1_it8ew"]

[node name="UpgradeUi" type="PanelContainer" unique_id=2040066604]
custom_minimum_size = Vector2(300, 0)
script = ExtResource("1_it8ew")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=971379645]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="VBoxContainer" unique_id=1696539410]
layout_mode = 2
text = "Stamina"

[node name="LabelDescription" type="Label" parent="VBoxContainer" unique_id=625369896]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Reduces Worker's cooldown"

[node name="LabelCost" type="Label" parent="VBoxContainer" unique_id=646281493]
layout_mode = 2
text = "Cost: 50R"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=2034902738]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonBuy" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=1365017805]
layout_mode = 2
mouse_default_cursor_shape = 2
text = " Upgrade"

[node name="ButtonDowngrade" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=951890415]
layout_mode = 2
tooltip_text = "This action will not return
the resources spent."
mouse_default_cursor_shape = 2
text = "Downgrade"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonBuy" to="." method="_on_button_buy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonDowngrade" to="." method="_on_button_downgrade_pressed"]
